# ai

./: AGENTS.md  COFILOT_AI_RESEARCH.md  LICENSE  PRD.md  README.md
.github/prompts/: platformSpecs.prompt.md  serviceSpecs.prompt.md
.github/workflows/: agent-location-scout.yml  mcp-scratchpad.yml
deploy/agent_provisioning/: README.md  config.yaml  provision_all.py  pyproject.toml
deploy/azure/: README.md  build-config.yaml  build.py  pyproject.toml
deploy/azure/terraform/: .gitignore  .terraform.lock.hcl  README.md  acr.tf  apim.apicenter.tf  apim.competitor-analyst.tf  apim.finance-analyst.tf  apim.genai.tf  apim.location-scout.tf  apim.market-analyst.tf  apim.mcp.business-registry.tf  apim.mcp.calculator.tf  apim.mcp.demographics.tf  apim.mcp.government-data.tf  apim.mcp.real-estate.tf  apim.mcp.scratchpad.tf  apim.research-orchestrator.tf  apim.synthesizer.tf  apim.tf  capp.agent-competitor-analyst-a2a.tf  capp.agent-finance-analyst-a2a.tf  capp.agent-location-scout-a2a.tf  capp.agent-market-analyst-a2a.tf  capp.agent-synthesizer-a2a.tf  capp.env.tf  capp.mcp-business-registry.tf  capp.mcp-calculator.tf  capp.mcp-demographics.tf  locals.tf  (+15 more)
deploy/local/: .env.example  README.md  config.yaml  pyproject.toml  run_all.py  test_mcp_scratchpad.py  test_orchestrator.py
deploy_workflow/: README.md  deploy_all.sh
deploy_workflow/agent_provisioning/: README.md  config.yaml.example  provision_all.py  pyproject.toml
deploy_workflow/azure/: README.md  build-config.yaml  build.py  pyproject.toml
docs/: IMPLEMENTATION_LOG.md
specs/platform/: ARCHITECTURE.md  DATA_MODELS.md  DEPLOYMENT.md  OBSERVABILITY.md  SECURITY.md  TESTING.md
src/: .gitignore
src/agent-competitor-analyst/: README.md  __init__.py  config.py  provision.py  provision_foundry_agent_base.py  pyproject.toml
src/agent-competitor-analyst/standalone/a2a/maf/: .env.example  Dockerfile  README.md  __init__.py  a2a_server.py  agent.py  config.py  main.py  pyproject.toml
src/agent-finance-analyst/: .env.example  README.md  __init__.py  config.py  provision.py  provision_foundry_agent_base.py  pyproject.toml
src/agent-finance-analyst/prompts/: system_prompt.jinja2  system_prompt.md
src/agent-finance-analyst/standalone/a2a/maf/: .env.example  Dockerfile  README.md  __init__.py  a2a_server.py  agent.py  config.py  main.py  pyproject.toml
src/agent-invoice-intake/: README.md  __init__.py  config.py  provision.py  pyproject.toml
src/agent-invoice-mailer/: .env.example  README.md  __init__.py  config.py  provision.py  pyproject.toml
src/agent-invoice-summary/: .env.example  README.md  __init__.py  config.py  provision.py  pyproject.toml
src/agent-invoice-summary/prompts/: system_prompt.jinja2
src/agent-invoice-validation/: .env.example  README.md  __init__.py  config.py  provision.py  pyproject.toml
src/agent-invoice-validation-summary/: .env.example  README.md  config.py  provision.py  pyproject.toml
src/agent-location-scout/: .env.example  Dockerfile  README.md  __init__.py  agent.py  config.py  main.py  provision.py  provision_foundry_agent_base.py  pyproject.toml  requirements-container.txt  test_agent.py  test_mcp.py
src/agent-location-scout/prompts/: system_prompt.jinja2  system_prompt.md
src/agent-location-scout/standalone/a2a/maf/: .env.example  Dockerfile  __init__.py  a2a_server.py  agent.py  config.py  main.py  pyproject.toml
src/agent-location-scout/standalone/foundry/langgraph/: Dockerfile  agent.py  config.py  main.py  provision.py  pyproject.toml  requirements.txt
src/agent-market-analyst/: .env.example  README.md  __init__.py  config.py  provision.py  provision_foundry_agent_base.py  pyproject.toml
src/agent-market-analyst/standalone/a2a/maf/: .env.example  Dockerfile  README.md  __init__.py  a2a_server.py  agent.py  config.py  main.py  pyproject.toml  retry_middleware.py  test_azure_connection.py
src/agent-research-orchestrator/: .env.example  Dockerfile  README.md  __init__.py  api.py  config.py  main.py  models.py  orchestrator.py  pyproject.toml  retry_middleware.py  telemetry.py  trace_poller.py
src/agent-research-orchestrator/prompts/: system_prompt.jinja2
src/agent-synthesizer/: .env.example  README.md  __init__.py  config.py  provision.py  provision_foundry_agent_base.py  pyproject.toml
src/agent-test/: .env.example  README.md  pyproject.toml  test_a2a_client.py
src/mcp-business-registry/: Dockerfile  README.md  config.py  main.py  mock_data.py  models.py  pyproject.toml  server.py
src/mcp-calculator/: Dockerfile  README.md  calculations.py  config.py  main.py  models.py  pyproject.toml  server.py
src/mcp-demographics/: Dockerfile  README.md  config.py  main.py  mock_data.py  models.py  pyproject.toml  server.py
src/mcp-government-data/: Dockerfile  README.md  config.py  main.py  mock_data.py  models.py  pyproject.toml  server.py
src/mcp-invoice-data/: Dockerfile  README.md  __init__.py  config.py  main.py  mcp_deploy.sh  mcp_test_client.py  mcp_test_invoice.py  mock_data.py  models.py  pyproject.toml  server.py
src/mcp-real-estate/: Dockerfile  README.md  config.py  main.py  mock_data.py  models.py  pyproject.toml  server.py
src/mcp-scratchpad/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  config.py  main.py  models.py  pyproject.toml  server.py  storage.py
src/mcp-scratchpad/mcp_scratchpad/: __init__.py  config.py  main.py  models.py  server.py  storage.py
src/mcp-web-search/: README.md
src/test-hosted-agent/: .env-template  .gitignore  Dockerfile  README.md  config.py  main.py  main_with_managed_identity.py  provision.py  pyproject.toml  requirements.txt
src/web-research/: Dockerfile  README.md  env.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
src/workflows/backend/: .dockerignore  .env.example  Dockerfile  README.md  backend-test.http  backend_deploy.sh  main.py  pyproject.toml
src/workflows/invoice-processing-seq/: README.md  pyproject.toml  run_agent.py  run_workflow.py  setup_agents.sh  workflow.yaml
src/workflows/invoice-processing-seq/bck/: setup_agents_template.py
(+180 files in other folders)
