[project]
name = "mcp-government-data"
version = "0.1.0"
description = "MCP Server for government permits, zoning, and regulatory data"
requires-python = ">=3.11"
dependencies = [
    "azure-monitor-opentelemetry>=1.6.0",
    "fastmcp>=2.0.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
