[project]
name = "invoice-workflow-backend"
version = "0.1.0"
description = "FastAPI backend for invoice processing workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "azure-ai-projects>=2.0.0b1",
    "azure-identity>=1.19.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "openai==2.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
