[project]
name = "competitor-analyst-a2a-maf"
version = "0.1.0"
description = "Competitor Analyst Agent - Standalone A2A implementation using Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Microsoft Agent Framework
    "agent-framework>=0.1.0",
    
    # Azure SDK
    "azure-identity>=1.17.0",
    
    # A2A Protocol SDK with HTTP server support
    "a2a-sdk[http-server]>=0.3.0",
    
    # Configuration
    "pydantic-settings>=2.0.0",
    
    # Templating
    "jinja2>=3.1.0",
    
    # Server
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
competitor-analyst-a2a = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = ["*.py", "*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
